# pro-rust

./: NAMING_CONVENTION.md  README.md
banking_system/: Cargo.toml  Makefile  README.md  STRUCTURE.md
banking_system/crates/cli/: Cargo.toml
banking_system/crates/core/: Cargo.toml
banking_system/crates/core/src/: account.rs  customer.rs  errors.rs  lib.rs
banking_system/crates/infra/: Cargo.toml
banking_system/crates/infra/src/: storage.rs
banking_system/crates/services/: Cargo.toml
banking_system/crates/services/src/: bank.rs
docs/: &str.md  const_static.md
e015_sizes/: Cargo.toml
e015_sizes/src/: main.rs
e01_variables/: Cargo.toml  NOTES.txt  VARIABLES.md
e01_variables/benches/: variable_bench.rs
e01_variables/src/: main.rs
e02_types/: Cargo.toml  TYPES.md
e02_types/benches/: variable.rs
e02_types/src/: main.rs
e03_arrays/: ARRAYS.md  Cargo.toml
e03_arrays/src/: main.rs
e04_ownership/: BORROW_CHECKER.md  Cargo.toml  OWNERSHIP.md
e04_ownership/src/: main.rs
e05_basic_testing/: Cargo.toml  TESTSUITE.md
e05_basic_testing/src/: lib.rs
e05_basic_testing/tests/: basic_test.rs
e06_structs/: Cargo.toml  STRUCTS.md
e06_structs/src/: lib.rs  main.rs
e07_enums/: Cargo.toml
e07_enums/src/: interpreter.rs  lexer.rs  lib.rs  parser.rs  types.rs
e09_generics_and_traits/: Cargo.toml
e10_closures_iterators/: Cargo.toml  README.md
e11_smart_pointers/: Cargo.toml
e16_concurrency/: Cargo.toml  DOCS.md
e18_macros/: Cargo.toml  DOCS.md
meal_card_manager/: Cargo.toml
payment_gateway/: Cargo.toml
trade_engine/: Cargo.toml
(+34 files in other folders)
